@@ -1,3 +1,8 @@
+2009-11-28  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/sndfile-spectrogram.c
+    Improve the way the spectrogram is interpolated.
+
 2009-11-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/sndfile-spectrogram.c
